[package]
name = "rust-advent-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
googletest = "0.10.0"
itertools = "0.12.0"
num = "0.4.1"
once_cell = "1.18.0"
priority-queue = "1.3.2"
regex = "1.10.2"
